# senior-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
notebooks/: skyserver-dump.csv  temperatures.ipynb
src/: kernel.cu  stargaze.cu
